<resources>
    <string name="app_name">Pokladna</string>
    <string name="buy_layout_confirm">Potvrdit</string>
    <string name="activity_add_buy_name">Název</string>
    <string name="activity_add_buy_buy">Kupní cena</string>
    <string name="activity_add_buy_sell">Prodejní cena</string>
    <string name="activity_add_buy_amount">Množství</string>
    <string name="activity_add_buy_confirm">Potvrdit</string>
    <string name="update">Upravit</string>
    <string name="delete">Smazat</string>
    <string name="add">Přidat</string>
    <string name="buy">Koupit</string>
    <string name="sell">Prodat</string>
    <string name="addbuy">Dokoupit</string>
    <string name="storage">Sklad</string>
    <string name="noData">Zatím zde nejsou žádná data :/</string>
    <string name="deleteAll">Vymazat vše?</string>
    <string name="deleteAlllonger">Opravdu si přejete vymazat všechny záznamy?</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="deleting">Mažu veškeré záznamy</string>
    <string name="wrongInput">Byla zadána nesprávna data.</string>
    <string name="confirmDelete">Opravdu chcete smazat: </string>
    <string name="selling">Prodej </string>
    <string name="shoppingCart">Košík </string>
    <string name="ss">Na dluh </string>
    <string name="password">Heslo</string>


    <string name="data_insert_1">Data byla úspěšně uložena.</string>
    <string name="data_insert_0">Data se neuložila.</string>

    <string name="data_update_1">Data byla úspěšně upravena.</string>
    <string name="data_update_0">Data se nepodařilo upravit.</string>

    <string name="data_delete_1">Data byla úspěšně smazána.</string>
    <string name="data_delete_0">Data se nepodařilo smazat.</string>

    <string name="sellingFor">Prodáváme za:</string>
    <string name="boughtFor">Koupeno za:</string>
    <string name="pieces">Kusů:</string>

    <string name="purchase">Nákup</string>
    <string name="cashRegister">Pokladna</string>
    <string name="buyAdditional">Dokoupit</string>
    <string name="buyItem">Koupit položku</string>
    <string name="addItem">Přidat položku</string>
    <string name="updateItem">Upravit položku</string>

    <string name="inputDialog1">Vytvořit dluh</string>
    <string name="inputDialog2">Zadejte jméno dlužníka </string>
    <string name="confirmInputDialog">Záznam dluhu přidán</string>

    <string name="debts">Dluhy</string>
    <string name="price">Cena</string>
    <string name="pay">Zaplatit</string>
    <string name="search">Hledat</string>

    <string name="newSession">Nová akce</string>
    <string name="itemsStart">zbozi_start.csv</string>
    <string name="debtsStart">dluhy_start.csv</string>
    <string name="itemsEnd">zbozi_konec.csv</string>
    <string name="debtsEnd">dluhy_konec.csv</string>
    <string name="sessionStart">Začátek nové akce</string>
    <string name="sessionEnd">Konec akce</string>
    <string name="startSession">Začít akci</string>
    <string name="endSession">Ukončit akci</string>
    <string name="endSessionConfirm">Opravdu chcete ukončit probíhající akci?</string>


    <string name="adminUsername">Admin</string>
    <string name="adminPassword">0729</string>

    <string name="AUsername">A-tým</string>
    <string name="APassword">1980</string>

    <string name="BUsername">B-tým</string>
    <string name="BPassword">1980</string>

    <string-array name="Usernames">
        <item>Admin</item>
        <item>A-tým</item>
        <item>B-tým</item>
    </string-array>

    <string-array name="Passwords">
        <item>0729</item>
        <item>1980</item>
        <item>1980</item>
    </string-array>


    <string name="prompt_email">1980</string>
    <string name="prompt_password">1980</string>
    <string name="action_sign_in_short">1980</string>
    <string name="action_sign_in">1980</string>

    <string name="balance">Peníze</string>

    <string name="remove">Odebrat</string>
    <string name="balancedialogtitle">Upravit hotovost na kase.</string>
    <string name="balancedialog">Doplňte sumu.</string>

    <string name="QRcode">QR kódem</string>
    <string name="byCash">Hotově</string>
    <string name="QR">Generuji QR kód</string>

    <string name="tax">Odvod</string>
    <string name="profiles">Profily</string>
    <string name="admin">Admin</string>

    <string name="newProfile">Nový profil</string>
    <string name="changePassword">Změnit heslo</string>
    <string name="deleteProfile">Smazat profil</string>
    <string name="paswword">Heslo</string>

    <string name="newPassword">Zadejte nové heslo:</string>
    <string name="cancel">Zrušit</string>

    <string name="addProfile">Přidat profil</string>
    <string name="allData">Všechny záznamy</string>

    <string name="dialogtitle">Výpis z akce</string>
    <string name="sold">Prodáno:</string>
    <string name="taxd">Odvod:</string>
    <string name="gain">Zisk:</string>




</resources>