<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sellLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5FFFFFF">

    <TextView
        android:id="@+id/moneyTextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pay"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/moneyTextView"
        app:layout_constraintTop_toBottomOf="@+id/moneyTextView2" />

    <TextView
        android:id="@+id/payTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyTextView" />

    <EditText
        android:id="@+id/search"
        android:layout_width="286dp"
        android:layout_height="104dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moneyTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/balance"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/moneyTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moneyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:layout_constraintVertical_bias="0.502" />

    <ImageView
        android:id="@+id/imageViewNoDataSS"
        android:layout_width="171dp"
        android:layout_height="174dp"
        android:layout_marginTop="200dp"
        android:alpha="0.2"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_no_data" />

    <TextView
        android:id="@+id/textViewNoDataSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:text="@string/noData"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNoDataSS" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/payButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:background="#FFFFFF"
            android:text="@string/byCash"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/qrButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:background="#FFFFFF"
            android:text="@string/QRcode"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/dellButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:background="#FFFFFF"
            android:text="@string/ss"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>