<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/profilePassword"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:enabled="true"
        android:focusable="true"
        android:hint="@string/password"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <EditText
        android:id="@+id/profileName"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:enabled="true"
        android:focusable="true"
        android:hint="@string/activity_add_buy_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/profilePassword"
        app:layout_constraintStart_toStartOf="@+id/profilePassword"
        app:layout_constraintTop_toBottomOf="@+id/profilePassword" />
</androidx.constraintlayout.widget.ConstraintLayout>