<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuySection.BuyToStorage">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/taxInput2"
        app:layout_constraintStart_toStartOf="@+id/taxInput2" />

    <EditText
        android:id="@+id/taxInput2"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/tax"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmmountUpdate" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        android:text="@string/delete"
        android:textColor="#780000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextSellUpdate"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/activity_add_buy_sell"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBuyUpdate" />

    <EditText
        android:id="@+id/editTextAmmountUpdate"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/activity_add_buy_amount"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSellUpdate" />

    <EditText
        android:id="@+id/editTextBuyUpdate"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/activity_add_buy_buy"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameUpdate" />

    <EditText
        android:id="@+id/editTextNameUpdate"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/activity_add_buy_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        android:text="@string/update"
        android:textColor="#1C3A01"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_buy_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNameUpdate"
        app:layout_constraintStart_toStartOf="@+id/editTextNameUpdate" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_buy_buy"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextBuyUpdate"
        app:layout_constraintStart_toStartOf="@+id/editTextBuyUpdate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_buy_sell"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSellUpdate"
        app:layout_constraintStart_toStartOf="@+id/editTextSellUpdate" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_buy_amount"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextAmmountUpdate"
        app:layout_constraintStart_toStartOf="@+id/editTextAmmountUpdate" />
</androidx.constraintlayout.widget.ConstraintLayout>